# Global-Webscraper

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
global_webscraper/: main.py
global_webscraper/embedding/: embedded.py
global_webscraper/notebooks/: scraper.ipynb
global_webscraper/scraper/: model.py  utilities.py
